--- a/src/sass/blocks/_header.scss
+++ b/src/sass/blocks/_header.scss
@@ -7,6 +7,7 @@
         font-size: 12px;
         font-weight: 500;
         text-align: center;
+        margin-right: 100px;
         span {
             color: #ffffff;
             font-size: 18px;
