--- a/src/sass/blocks/_buttons.scss
+++ b/src/sass/blocks/_buttons.scss
@@ -7,5 +7,21 @@
     font-weight: 500;
     text-transform: uppercase;
     border: none;
-    border-radius: 7%;
+    border-radius: 5px;
+    &:focus {
+        background-color: gray;
+    }
+    &:hover {
+		background-image: none;
+		background-color: darkred;
+    }
 }
+
+.main_button {
+    width: 300px;
+    height: 50px;
+    font-size: 16px;
+    margin-top: 63px;
+}
+    
+    
